--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="#">Pacientes</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Terapias</span></a>
+            <a class="nav-link" href="#">Contabilidad</span></a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
