--- a/patients/templates/patient_new.html
+++ b/patients/templates/patient_new.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n static add_class %}
 {% load staticfiles %}
 {% block custom_css %}
 	<!-- TEMPLATE CUSTOM CSS -->
@@ -11,9 +12,15 @@
 			<div class="patient-add-content">
 				<h4>Información Principal</h4>
 				<hr/>
-				<form>
+				<form action="." method="POST"> {% csrf_token %}
 				  <div class="form-group row">
-				    <label for="inputEmail3" class="col-sm-4 col-form-label">Nombre Completo</label>
+				    <label for="inputEmail3" class="col-sm-4 col-form-label">Nombre</label>
+				    <div class="col-sm-8">
+				      {{ form.first_name|add_class:"form-control" }}
+				    </div>
+				  </div>
+				  <div class="form-group row">
+				    <label for="inputEmail3" class="col-sm-4 col-form-label">Apellido</label>
 				    <div class="col-sm-8">
 				      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
 				    </div>
