--- a/patients/templates/patient_new.html
+++ b/patients/templates/patient_new.html
@@ -22,43 +22,43 @@
 				  <div class="form-group row">
 				    <label for="inputEmail3" class="col-sm-4 col-form-label">Apellido</label>
 				    <div class="col-sm-8">
-				      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+				      {{ form.last_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Cédula</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.cedula|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Sexo</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.sexo|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Edad</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Fecha de Nacimiento</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control datepicker" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Referido por</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Seguro Médico</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 
@@ -68,25 +68,25 @@
 				  <div class="form-group row">
 				    <label for="inputEmail3" class="col-sm-4 col-form-label">Dirección</label>
 				    <div class="col-sm-8">
-				      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Teléfono</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Teléfono 2</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Celular</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 
@@ -96,25 +96,25 @@
 				  <div class="form-group row">
 				    <label for="inputEmail3" class="col-sm-4 col-form-label">Ocupación</label>
 				    <div class="col-sm-8">
-				      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Lugar de Trabajo</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Posición</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Teléfono del Trabajo</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 
@@ -124,25 +124,25 @@
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">En caso de emergencia contactar a</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Teléfono</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Celular</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <div class="form-group row">
 				    <label for="inputPassword3" class="col-sm-4 col-form-label">Otro número</label>
 				    <div class="col-sm-8">
-				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				      {{ form.first_name|add_class:"form-control" }}
 				    </div>
 				  </div>
 				  <hr/>
