--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,11 @@
     <meta name="author" content="">
     <link rel="icon" href="#">
 
-    <title>CIREN - Consumed</title>
+    <title>{% block page_title %}{% endblock %} - CIREN</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
@@ -31,7 +32,7 @@
             <a class="nav-link" href="#">Escritorio</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Pacientes</span></a>
+            <a class="nav-link" href="{% url 'patient-list' %}">Pacientes</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">Contabilidad</span></a>
@@ -55,6 +56,15 @@
     <script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery.min.js' %}"><\/script>')</script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
+
+    <script>
+      $( function() {
+        $( ".datepicker" ).datepicker({
+            dateFormat: "dd-mm-yy"
+        });
+      } );
+    </script>
     {% block custom_js %}{% endblock %}
   </body>
 </html>
