--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="#">Escritorio</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'patient-list' %}">Pacientes</span></a>
+            <a class="nav-link" href="{% url 'pacientes:list' %}">Pacientes</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">Contabilidad</span></a>
