--- a/patients/templates/patient_list.html
+++ b/patients/templates/patient_list.html
@@ -27,13 +27,13 @@
 				  	{% for element in object_list %}
 				    <tr>
 				      <th scope="row">{{ element.id }}</th>
-				      <td><a href="{% url 'patient-view' element.id %}">
+				      <td><a href="{% url 'pacientes:view' element.id %}">
 				      	{{ element.first_name }} {{ element.last_name}}</a>
 				      </td>
 				      <td>{{ element.phone_1 }}</td>
 				      <td>
 			      		<!-- EDIT -->
-				      	<a class="btn btn-outline-primary btn-sm" href="{% url 'patient-edit' element.id %}" role="button">
+				      	<a class="btn btn-outline-primary btn-sm" href="{% url 'pacientes:edit' element.id %}" role="button">
 				      		<i class="fa fa-pencil" aria-hidden="true"></i>
 			      		</a> 
 			      		<!-- DELETE -->
@@ -50,6 +50,7 @@
 				  No encontramos ningún paciente en la base de datos. ¡Registra uno ahora!
 				</div>
 				{% endif %}
+
 			</div>
 		</div>
 	</div>
