--- a/patients/templates/patient_new.html
+++ b/patients/templates/patient_new.html
@@ -147,7 +147,7 @@
 				    </div>
 				  </div>
 				  <hr/>
-				  <a href="{% url 'patient-list' %}" class="btn btn-danger">Cancelar</a>
+				  <a href="{% url 'pacientes:list' %}" class="btn btn-danger">Cancelar</a>
 				  <input class="btn btn-success" type="submit" value="Registrar Nuevo Paciente">
 				</form>
 			</div>
