--- a/patients/templates/patient_view.html
+++ b/patients/templates/patient_view.html
@@ -35,17 +35,17 @@
 				<div class="profile-usermenu">
 					<ul class="nav flex-column">
 						<li class="active">
-							<a href="#">
+							<a href="{% url 'pacientes:view' object.id %}">
 							<i class="fa fa-user" aria-hidden="true"></i>
 							Perfil </a>
 						</li>
 						<li>
-							<a href="#">
+							<a href="{% url 'pacientes:therapy-list' object.id %}">
 							<i class="fa fa-star" aria-hidden="true"></i>
 							Terapias </a>
 						</li>
 						<li>
-							<a href="#" target="_blank">
+							<a href="{% url 'pacientes:clinich-view' object.id %}">
 							<i class="fa fa-files-o" aria-hidden="true"></i>
 							Historial Clínico </a>
 						</li>
@@ -66,7 +66,7 @@
 					</thead>
                     <tr>
                         <td> Nombre Completo </td>
-                        <td> {{object.first_name}} {{object.last_name}} </td>
+                        <td> {{object.first_name}} {{object.last_name}} {{clinich_qs.object.patient}}</td>
                     </tr>
                     <tr>
                         <td> Cédula </td>
